{
    "name": "PlayerControls",
    "maps": [
        {
            "name": "PlayerMap",
            "id": "4fc00ab3-8830-4891-affa-1e6f7d3eca50",
            "actions": [
                {
                    "name": "MoveLeft",
                    "type": "Button",
                    "id": "df24762f-a8f8-4db0-9d6f-04bbd38f34f6",
                    "expectedControlType": "",
                    "processors": "AxisDeadzone",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "MoveRight",
                    "type": "Button",
                    "id": "3d12fc85-0e8a-43df-919d-ef5a133dad29",
                    "expectedControlType": "",
                    "processors": "AxisDeadzone",
                    "interactions": "",
                    "initialStateCheck": true
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "1b6664ce-ce50-4bc4-9aa1-7032bd77cdbe",
                    "path": "<Gamepad>/dpad/left",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MoveLeft",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "2f127ba1-730f-4110-959f-85537c30efc3",
                    "path": "<Gamepad>/leftStick/left",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MoveLeft",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "9c254fe4-d026-432f-afe0-930933dbf5be",
                    "path": "<Gamepad>/dpad/right",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MoveRight",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "91af3f3f-ff69-4e57-b8a9-593ce2b5dbf0",
                    "path": "<Gamepad>/leftStick/right",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MoveRight",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}